Bonus fix v porovnání

--- a/Web.Statu/Views/Kindex/Porovnat.cshtml
+++ b/Web.Statu/Views/Kindex/Porovnat.cshtml
@@ -153,10 +153,17 @@
                             <td class="porovnani number @(cmp.Ico)_@(i)">
                                 @if (cmp.AnnualData.KIndexReady)
                                 {
-                                    @Html.KIndexIcon(KIndexData.DetailInfo.KIndexLabelForPart(velicina, hodnota ?? 0),
-                                        "height:25px",
-                                        showNone: true,
-                                        title: KIndexData.KIndexCommentForPart(velicina, cmp.AnnualData))
+                                    if(velicina == KIndexData.KIndexParts.PercSmlouvyPod50kBonus)
+                                    {
+                                        <p>@(hodnota?.ToString("F2"))</p>
+                                    }
+                                    else
+                                    {
+                                        @Html.KIndexIcon(KIndexData.DetailInfo.KIndexLabelForPart(velicina, hodnota ?? 0),
+                                            "height:25px",
+                                            showNone: true,
+                                            title: KIndexData.KIndexCommentForPart(velicina, cmp.AnnualData))
+                                    }
 
                                 }
                                 else
@@ -221,7 +228,12 @@
             $("#nazev").append(`<th class="porovnaniHead number ${data.Ico}_${unique}" style="width: 150px"><a href="#" onclick="RemoveCompany('${data.Ico}_${unique}'); return false;" style="color: red; float:right; margin-left: 5px;"><i class="far fa-trash-alt"></i></a><a href="/kindex/detail/${data.Ico}">${data.Jmeno}</a></th>`);
             $(`#kindex`).append(`<td class="porovnani number ${data.Ico}_${unique}">${data.Kindex}</td>`);
             data.Radky.forEach(radek => {
-                $(`#${radek.VelicinaName}`).append(`<td class="porovnani number ${data.Ico}_${unique}">${(data.KindexReady) ? radek.Label : "K-Index pro toto období nebyl spočítán"}</td>`);
+                if (radek.VelicinaName === "PercSmlouvyPod50kBonus") {
+                    $(`#${radek.VelicinaName}`).append(`<td class="porovnani number ${data.Ico}_${unique}">${(data.KindexReady) ? `<p>${radek.Value}</p>` : "K-Index pro toto období nebyl spočítán"}</td>`);
+                }
+                else {
+                    $(`#${radek.VelicinaName}`).append(`<td class="porovnani number ${data.Ico}_${unique}">${(data.KindexReady) ? radek.Label : "K-Index pro toto období nebyl spočítán"}</td>`);
+                }
             });
 
         }, "json");
