--- a/Web.Statu/Views/Home/Subjekt2_Profile.cshtml
+++ b/Web.Statu/Views/Home/Subjekt2_Profile.cshtml
@@ -109,7 +109,7 @@
                         </td>
                         <td>
                             <p class=" muted">
-                                Index korupčního rizika - zkráceně K–Index, je ukazatel míry rizikových faktorů. Tyto faktory jsou spojovány s rizikem korupce a nehospodárným nakládáním veřejých peněz.
+                                Index korupčního rizika - zkráceně K–Index, je ukazatel míry rizikových faktorů. Tyto faktory jsou spojovány s rizikem korupce a nehospodárným nakládáním veřejných peněz.
                             </p>
                             @if (kidx.roky.Any(m => m.KIndexReady))
                             {
