--- a/Web.Statu/Views/Kindex/Index.cshtml
+++ b/Web.Statu/Views/Kindex/Index.cshtml
@@ -40,7 +40,7 @@
 
             <div class="block-col ">
                 <p class="muted">
-                    Index korupčního rizika - zkráceně K–Index, je ukazatel míry rizikových faktorů. Tyto faktory jsou spojovány s rizikem korupce a nehospodárným nakládáním veřejých peněz.
+                    Index korupčního rizika - zkráceně K–Index, je ukazatel míry rizikových faktorů. Tyto faktory jsou spojovány s rizikem korupce a nehospodárným nakládáním veřejných peněz.
                 </p>
                 <p>
                     <img src="/content/Img/kindex-info.png" style="width:100%;" title="Popis K-Indexu" />
