--- a/Web.Statu/Views/Home/Subjekt_Profile.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_Profile.cshtml
@@ -120,7 +120,7 @@ else
                         </th>
                         <td>
                             <p class=" muted">
-                                Index korupčního rizika - zkráceně K–Index, je ukazatel míry rizikových faktorů. Tyto faktory jsou spojovány s rizikem korupce a nehospodárným nakládáním veřejých peněz.
+                                Index korupčního rizika - zkráceně K–Index, je ukazatel míry rizikových faktorů. Tyto faktory jsou spojovány s rizikem korupce a nehospodárným nakládáním veřejných peněz.
                             </p>
                             <a href="/kindex/detail/@Model.ICO">
                                 <img src="/socialbanner/kindex?v=@Model.ICO" style="width:80%;max-width:500px;min-width:150px;height:auto" />
