--- a/Web.Statu/Views/Home/Osoba.cshtml
+++ b/Web.Statu/Views/Home/Osoba.cshtml
@@ -16,7 +16,7 @@ ViewBag.OpenGraphMore = "<meta property=\"og:image:width\" content=\"1920\" />\n
 
 HlidacStatu.Lib.Data.Relation.AktualnostType aktualnost = (HlidacStatu.Lib.Data.Relation.AktualnostType)ViewBag.Aktualnost;
 
-var ostat = new HlidacStatu.Lib.Analysis.OsobaStatistic(Model.NameId, HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny, true);
+var ostat = new HlidacStatu.Lib.Analysis.OsobaStatistic(Model.NameId, HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny, false);
 
 ViewBag.HideTitle = true;
 
