--- a/Web.Statu/Views/Home/Report.cshtml
+++ b/Web.Statu/Views/Home/Report.cshtml
@@ -152,6 +152,18 @@ XINTEXT (0->0.7mld),
                     ;
             viewCache = "0H";
             break;
+        case 29:
+            ViewBag.Title = "Volné kapacity intenzivní péče v nemocnicích";
+            ViewBag.SocialShareText = "Data o kapacitě nemocnic, která Ministerstvo zdravotnictví a ÚZIS tají nejen před veřejností, ale pouze omezeně k nim mají přístup i dispečinky záchranných služeb,nemocnice a lékaři.";
+            ViewBag.SubTitle = "";
+            ViewBag.SocialShareTitle = "Volné kapacity intenzivní péče v nemocnicích";
+            //ViewBag.SocialImage = $"https://www.hlidacstatu.cz/socialbanner/page?d={DateTime.Now.ToString("d.M.yy")}&v=" + Url.Encode(Request.Url.AbsoluteUri);
+            //ViewBag.OpenGraphMore = "<meta property=\"og:image:width\" content=\"1920\" />\n"
+            //        + "<meta property=\"og:image:height\" content=\"1080\" />"
+            //        + "<meta property=\"og:image:type\" content=\"image/png\" />"
+            ;
+            viewCache = "éH";
+            break;        
         default:
             break;
     }
